syntax = "proto3";

package api.msg.gateway;

option go_package = "github.com/openlinkz/openlink/api/msg_gateway";

import "api/protocol/protocol.proto";
import "google/api/annotations.proto";

service MsgGatewayService {
  rpc PushMsg(PushMsgReq) returns (PushMsgReply) {
    option(google.api.http) = {
      post: "/gateway/push_msg",
      body: "*"
    };
  }
}

message PushMsgReq {
  repeated string SIDs = 1;
  msg.protocol.Protocol protocol = 2;
}

message PushMsgReply {
  int32 successTotal = 1;
  int32 failedTotal = 2;
}